<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en" >
    <string name="empty" translatable="false"/>
    <string name="app_name">Bill Calculator</string>
    <string name="app_name_short">Bill Calculator</string>
    <string name="reading_missing">Empty!</string>
    <string name="reading_order_error">Usage too low!</string>
    <string name="date_error">Period too short!</string>
    <string name="activity_drawer_toolbar_image_content_desc">Bills to pay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_group_new_bill">New bill</string>
    <string name="drawer_new_tauron_bill">energy from TAURON</string>
    <string name="drawer_new_pge_bill">energy from PGE</string>
    <string name="drawer_new_pgnig_bill">gas from PGNiG</string>
    <string name="drawer_group_more">More</string>
    <string name="new_ui_header">New version 2.0</string>
    <string name="new_ui_content">Application has been updated with new look.\nSee 4 short tips now.\nIf something is not clear, let me know\n(menu: About > e-mail).</string>
    <string name="new_ui_button">Start</string>
    <string name="main_help_fab_desc">Calculate bill</string>
    <string name="main_help_list_desc">Browse bills</string>
    <string name="main_help_swipe_delete_desc">Swipe bill to delete</string>
    <string name="main_help_menu_desc">Menu</string>
    <string name="main_help_options_desc">More actions</string>
    <string name="activity_drawer_help_swipe_delete_content_desc">Finger moving right</string>
    <string name="history_label">My bills</string>
    <string name="action_delete">Delete</string>
    <string name="history_period" translatable="false">%1$s - %2$s</string>
    <string name="history_readings_label">Readings</string>
    <string name="history_amount" translatable="false">%s zł</string>
    <string name="empty_history">Tap + to calculate bill</string>
    <string name="bill_deleted">Deleted</string>
    <string name="action_undo_delete">UNDO</string>
    <string name="history_item_amount_label">Charge:</string>
    <string name="history_item_logo_desc">Provider logo</string>
    <string name="form_reading_from_hint">previous</string>
    <string name="form_reading_to_hint">current</string>
    <string name="form_reading_unit_m3" translatable="false">[m\u00B3]</string>
    <string name="form_reading_unit_kWh" translatable="false">[kWh]</string>
    <string name="form_readings_header">Meter readings</string>
    <string name="form_dates_header">For period</string>
    <string name="form_logo_description">Provider logo</string>
    <string name="form_entry_reading_icon_content_desc">Readings icon</string>
    <string name="form_entry_dates_icon_content_desc">Date period icon</string>
    <string name="action_print">Print to PDF</string>
    <string name="print_dir">Bills</string>
    <string name="print_failed">Saving to PDF failed</string>
    <string name="print_no_pdf_viewer">Bill printed to file: %s</string>
    <string name="error_permission_storage_missing">Missing Storage permission</string>
    <string name="rationale_dialog_title">Required permission</string>
    <string name="rationale_dialog_msg">Printing the bill requires device Storage access to create file. Denying access disables the printing!</string>
    <string name="rationale_dialog_ok">Accept</string>
    <string name="rationale_dialog_goto_settings_msg">Printing the bill requires device Storage access to create file. Access can be approved through:\nPermissions > Storage</string>
    <string name="rationale_dialog_goto_settings">Go to Settings</string>
    <string name="rationale_dialog_cancel">Cancel</string>
    <string name="dialog_bill_without_oze_title">Information</string>
    <string name="dialog_bill_without_oze_message">Following bill does not include \&#8216;opłata OZE\&#8216; fee which started to apply from July 2016. It is recommended to re-calculate this bill.</string>
    <string name="dialog_bill_without_oze_positive">OK</string>
    <string name="pge_bill_logo_content_desc" translatable="false">PGE logo</string>
    <string name="energy_bill">Energy bill</string>
    <string name="rachunek_rozliczeniowy" translatable="false">RACHUNEK ROZLICZENIOWY z dnia %1$s\nZA ENERGIĘ ELEKTRYCZNĄ I USŁUGI DYSTRYBUCJI</string>
    <string name="strefa_calodobowa" translatable="false">całodobowa</string>
    <string name="strefa_dzienna" translatable="false">dzienna</string>
    <string name="strefa_nocna" translatable="false">nocna</string>
    <string name="strefa_pusta" translatable="false"/>
    <string name="za_energie_czynna" translatable="false">za energię czynną</string>
    <string name="skladnik_jakosciowy" translatable="false">składnik jakościowy</string>
    <string name="oplata_sieciowa" translatable="false">opłata sieciowa</string>
    <string name="oplata_przejsciowa" translatable="false">opłata przejściowa</string>
    <string name="oplata_stala_za_przesyl" translatable="false">opł. stała za przesył</string>
    <string name="oplata_abonamentowa" translatable="false">opłata abonamentowa</string>
    <string name="pge_bill_oplata_handlowa" translatable="false">opłata handlowa</string>
    <string name="oplata_oze" translatable="false">opłata OZE</string>
    <string name="za_energie_czynna_G12dzien" translatable="false">za energię czynną (strefa dzienna)</string>
    <string name="za_energie_czynna_G12noc" translatable="false">za energię czynną (strefa nocna)</string>
    <string name="oplata_sieciowa_G12dzien" translatable="false">opłata sieciowa (strefa dzienna)</string>
    <string name="oplata_sieciowa_G12noc" translatable="false">opłata sieciowa (strefa nocna)</string>
    <string name="tariff_G11_on_bill" translatable="false">Taryfa: G11</string>
    <string name="tariff_G12_on_bill" translatable="false">Taryfa: G12</string>
    <string name="kWh" translatable="false">kWh</string>
    <string name="MWh" translatable="false">MWh</string>
    <string name="m_c" translatable="false">m-c</string>
    <string name="akcyza" translatable="false">Od %d kWh energii elektrycznej [ KOD CN 2716 00 00] naliczono akcyzę w kwocie %s zł.</string>
    <string name="to_pay" translatable="false">DO ZAPŁATY : %s zł</string>
    <string name="for_period" translatable="false">Za okres od %1$s do %2$s</string>
    <string name="tauron_bill_logo_content_desc" translatable="false">Tauron logo</string>
    <string name="tauron_energia_elektryczna" translatable="false">Energia elektryczna czynna całodobowa</string>
    <string name="tauron_oplata_dyst_zmienna" translatable="false">Opłata dystr. zm. całodobowa</string>
    <string name="tauron_oplata_dyst_stala" translatable="false">Opłata dystrybucyjna stała</string>
    <string name="tauron_oplata_przejsciowa" translatable="false">Opłata przejściowa</string>
    <string name="tauron_oplata_abonamentowa" translatable="false">Opłata abonamentowa</string>
    <string name="tauron_oplata_oze" translatable="false">Opłata OZE całodobowa</string>
    <string name="tauron_bill_oplata_handlowa" translatable="false">Opłata handlowa</string>
    <string name="tauron_energia_elektryczna_G12dzien" translatable="false">Energia elektryczna czynna dzienna</string>
    <string name="tauron_energia_elektryczna_G12noc" translatable="false">Energia elektryczna czynna nocna</string>
    <string name="tauron_oplata_dyst_zmienna_G12dzien" translatable="false">Opłata dystr. zm. dzienna</string>
    <string name="tauron_oplata_dyst_zmienna_G12noc" translatable="false">Opłata dystr. zm. nocna</string>
    <string name="tauron_oplata_oze_G12dzien" translatable="false">Opłata OZE dzienna</string>
    <string name="tauron_oplata_oze_G12noc" translatable="false">Opłata OZE nocna</string>
    <string name="tauron_data_wystawienia" translatable="false">Data wystawienia %1$s</string>
    <string name="tauron_grupa_taryfowa" translatable="false">Grupa taryfowa Sprzedawcy: %1$s\nGrupa taryfowa OSD(dystrybucja): %1$s</string>
    <string name="tauron_data_sprzedazy" translatable="false">Data sprzedaży: %1$s\nRozliczenie z tytułu dostarczenia energii elektrycznej\n(PKWiU 35.11.10.0)</string>
    <string name="tauron_okres_rozliczeniowy" translatable="false">Okres rozliczeniowy: %1$s - %2$s</string>
    <string name="tauron_kwota_akcyzy" translatable="false">Kwota podatku akcyzowego, zawarta w wartości energii wykazanej w tym rozliczeniu wynosi %1$s zł.</string>
    <string name="pgnig_bill_logo_content_desc" translatable="false">PGNiG logo</string>
    <string name="gas_bill">Gas bill</string>
    <string name="rozliczenie_dnia" translatable="false">Rozliczenie z dnia %1$s</string>
    <string name="wartosc_faktury" translatable="false">Wartość faktury brutto: %1$s zł</string>
    <string name="odczyt_na_dzien" translatable="false">%d [m\u00B3]</string>
    <string name="zuzycie" translatable="false">%d [m\u00B3]</string>
    <string name="zuzycie_razem" translatable="false">Zużycie razem: %d [m\u00B3]</string>
    <string name="wsp_konwersji" translatable="false">Wsp. konwersji: %1$s</string>
    <string name="zuzycie_razem_kWh" translatable="false">Zużycie razem: %1$s [kWh]</string>
    <string name="abonamentowa" translatable="false">Abonamentowa</string>
    <string name="pgnig_bill_oplata_handlowa" translatable="false">Handlowa</string>
    <string name="settings_oplata_abonamentowa" translatable="false">Opłata abonamentowa</string>
    <string name="settings_pge" translatable="false">PGE</string>
    <string name="settings_pge_summary">Set tariff and prices</string>
    <string name="oplata_przejsciowa_desc" translatable="false">Składnik opłaty przejściowej jest zależny od rocznego zużycia kWh:\n - do 500 kWH/rok wynosi 0.45 zł netto\n - od 500 do 1200 kWh/rok wynosi 1.90 zł netto\n - od 1200 kWh/rok wynosi 6.50 zł netto</string>
    <string name="oplata_stala_za_przesyl_desc" translatable="false">Inne nazwy:\n - składnik stały stawki sieciowej,\n - opłata przesyłowa stała.\nCena naliczana co miesiąc, niezależnie od zużycia.</string>
    <string name="oplata_abonamentowa_desc" translatable="false">Stała cena za abonament, naliczana co miesiąc, niezależnie od zużycia.</string>
    <string name="oplata_oze_desc" translatable="false">Opłata na Odnawialne Źródła Energii, obowiązująca od lipca 2016 r., zależna od zużycia.</string>
    <string name="za_energie_czynna_desc" translatable="false">Cena netto jednej kilowatogodziny energii.</string>
    <string name="oplata_sieciowa_desc" translatable="false">Inne nazwy:\n - składnik zmienny stawki sieciowej,\n - opłata przesyłowa zmienna,\n - opłata dystrybucyjna zmienna.\nCena dostarczania prądu.</string>
    <string name="za_energie_czynna_G12dzien_desc" translatable="false">Cena netto jednej kilowatogodziny energii, w strefie dziennej.</string>
    <string name="oplata_sieciowa_G12dzien_desc" translatable="false">Inne nazwy:\n - składnik zmienny stawki sieciowej,\n - opłata przesyłowa zmienna,\n - opłata dystrybucyjna zmienna.\nCena dostarczania prądu, w strefie dziennej.</string>
    <string name="za_energie_czynna_G12noc_desc" translatable="false">Cena netto jednej kilowatogodziny energii, w strefie nocnej.</string>
    <string name="oplata_sieciowa_G12noc_desc" translatable="false">Inne nazwy:\n - składnik zmienny stawki sieciowej,\n - opłata przesyłowa zmienna,\n - opłata dystrybucyjna zmienna.\nCena dostarczania prądu, w strefie nocnej.</string>
    <string name="settings_pgnig" translatable="false">PGNiG</string>
    <string name="settings_pgnig_summary">Set gas conversion ratio and prices</string>
    <string name="settings_tauron" translatable="false">Tauron</string>
    <string name="settings_tauron_summary">Set tariff and prices</string>
    <string name="settings_tauron_tariff" translatable="false">Grupa Taryfowa</string>
</resources>