<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="preferences_tauron_tariff"
        android:title="@string/tauron_tariff_in_preferences"
        android:entryValues="@array/preferences_energy_tariff_values"
        android:entries="@array/energy_tariff_picks"
        android:summary="@string/energy_tariff_G11_in_preferences"
        android:defaultValue="@string/energy_tariff_G11_in_preferences" />

    <EditTextPreference
        android:key="oplataDystrybucyjnaStala"
        android:inputType="numberDecimal"
        android:dialogMessage="@string/oplata_stala_za_przesyl_desc"
        android:title="@string/tauron_oplata_dyst_stala" />

    <EditTextPreference
        android:key="oplataPrzejsciowa"
        android:inputType="numberDecimal"
        android:dialogMessage="@string/oplata_przejsciowa_desc"
        android:title="@string/tauron_oplata_przejsciowa" />

    <EditTextPreference
        android:key="oplataAbonamentowa"
        android:inputType="numberDecimal"
        android:dialogMessage="@string/oplata_abonamentowa_desc"
        android:title="@string/tauron_oplata_abonamentowa" />

    <!-- G11 ============================================================ -->
    <PreferenceCategory
        android:key="@string/preferences_category_G11"
        android:title="@string/energy_tariff_G11_in_preferences">

        <EditTextPreference
            android:key="energiaElektrycznaCzynna"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/za_energie_czynna_desc"
            android:title="@string/tauron_energia_elektryczna" />

        <EditTextPreference
            android:key="oplataDystrybucyjnaZmienna"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/oplata_sieciowa_desc"
            android:title="@string/tauron_oplata_dyst_zmienna" />

    </PreferenceCategory>
    <!-- G12 ============================================================ -->
    <PreferenceCategory
        android:key="@string/preferences_energy_category_G12"
        android:title="@string/energy_tariff_G12_in_preferences">

        <EditTextPreference
            android:key="energiaElektrycznaCzynnaDzien"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/za_energie_czynna_G12dzien_desc"
            android:title="@string/tauron_energia_elektryczna_G12dzien" />

        <EditTextPreference
            android:key="energiaElektrycznaCzynnaNoc"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/za_energie_czynna_G12noc_desc"
            android:title="@string/tauron_energia_elektryczna_G12noc" />

        <EditTextPreference
            android:key="oplataDystrybucyjnaZmiennaDzien"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/oplata_sieciowa_G12dzien_desc"
            android:title="@string/tauron_oplata_dyst_zmienna_G12dzien" />

        <EditTextPreference
            android:key="oplataDystrybucyjnaZmiennaNoc"
            android:inputType="numberDecimal"
            android:dialogMessage="@string/oplata_sieciowa_G12noc_desc"
            android:title="@string/tauron_oplata_dyst_zmienna_G12noc" />

    </PreferenceCategory>

</PreferenceScreen>