<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:padding="2dp"
    android:background="@color/white"
    tools:context=".bill.activity.TauronBillActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/bill_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:padding="4dp" >

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tauron"
                android:layout_alignRight="@+id/t_components_table"
                android:layout_alignEnd="@+id/t_components_table"
                android:layout_margin="@dimen/double_padding"
                android:contentDescription="@string/tauron_bill_logo_content_desc"
                tools:ignore="UnknownIdInLayout"/>

            <TextView
                android:id="@+id/tv_invoice_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_logo"
                android:layout_alignRight="@id/image_logo"
                android:layout_alignEnd="@id/image_logo"
                android:layout_marginTop="@dimen/double_padding"
                android:text="@string/tauron_data_wystawienia"/>

            <TextView
                android:id="@+id/tv_register_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_invoice_date"
                android:layout_marginTop="@dimen/double_padding"
                android:textStyle="bold"
                android:text="Numer Ewidencyjny: 000 0000 000"
                tools:ignore="HardcodedText"/>

            <TextView
                android:id="@+id/tv_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_register_number"
                android:text="@string/tauron_grupa_taryfowa"/>

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_tariff"
                android:text="Zabezp.(A): 25        Moc umowna (kW): 5,00        Ilość faz: 1"
                tools:ignore="HardcodedText"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_power"
                android:textStyle="bold"
                android:text="@string/tauron_data_sprzedazy"/>

            <TextView
                android:id="@+id/tv_for_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/t_components_table"
                android:layout_alignEnd="@+id/t_components_table"
                android:layout_alignBottom="@id/tv_title"
                android:textStyle="bold"
                android:text="@string/tauron_okres_rozliczeniowy"
                tools:ignore="UnknownIdInLayout"/>

            <include
                layout="@layout/tauron_components_table" />

            <TextView
                android:id="@+id/tv_excise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t_components_table"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/tauron_kwota_akcyzy"
                tools:ignore="UnknownIdInLayout"/>
        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>
