<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/form">

    <ImageView
        android:id="@+id/form_entry_reading_icon"
        style="@style/FormEntryIcon"
        android:contentDescription="@string/form_entry_reading_icon_content_desc"
        app:layout_constraintBottom_toBottomOf="@+id/form_entry_reading_from"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_entry_reading_from"
        app:srcCompat="@drawable/ic_history_black_24dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/form_entry_reading_from"
        style="@style/FormEntryInput"
        android:hint="@string/form_reading_from_hint"
        app:layout_constraintLeft_toRightOf="@+id/form_entry_reading_icon"
        app:layout_constraintRight_toLeftOf="@+id/form_entry_reading_separator"
        app:layout_constraintTop_toBottomOf="@+id/form_entry_reading_header"
        tools:layout_width="75dp">

        <pl.srw.billcalculator.form.view.InstantAutoCompleteTextInputEditText
            android:id="@+id/form_entry_reading_from_input"
            style="@style/FormReadingEntry"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/form_entry_reading_to_input"
            android:nextFocusForward="@+id/form_entry_reading_to_input"
            android:nextFocusRight="@+id/form_entry_reading_to_input"
            tools:text="123"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/form_entry_reading_separator"
        style="@style/FormEntrySeparator"
        app:layout_constraintBottom_toBottomOf="@+id/form_entry_reading_from"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_entry_reading_from"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/form_entry_reading_to"
        style="@style/FormEntryInput"
        android:hint="@string/form_reading_to_hint"
        app:layout_constraintLeft_toRightOf="@+id/form_entry_reading_separator"
        app:layout_constraintRight_toLeftOf="@+id/form_entry_reading_unit"
        app:layout_constraintTop_toTopOf="@+id/form_entry_reading_from"
        tools:layout_width="75dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/form_entry_reading_to_input"
            style="@style/FormReadingEntry"
            android:nextFocusLeft="@+id/form_entry_reading_from_input"
            android:nextFocusUp="@+id/form_entry_reading_from_input"
            tools:text="234"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/form_entry_reading_unit"
        style="@style/FormEntryUnit"
        app:layout_constraintBottom_toBottomOf="@+id/form_entry_reading_from"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_entry_reading_from"
        tools:text="@string/form_reading_unit_kWh"/>
</merge>

                